--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, max-scale=1">
     <meta name="theme-color" content="#000000">
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
      <!--
